--- a/my-app/public/index.html
+++ b/my-app/public/index.html
@@ -26,12 +26,11 @@
 </head>
 
 <body>
-  <noscript>You need to enable JavaScript to run this app.</noscript>
   
   <div id="root">
     <div class="App">
       <div class="wallet-info">
-        <p>Taloc</p>
+        <p id="title">Taloc></p> 
         <p>Account: Not Connected</p>
       </div>
       <div class="connect-wallet"><button>Connect Wallet</button></div>
