--- a/my-app/public/index.html
+++ b/my-app/public/index.html
@@ -30,7 +30,7 @@
   <div id="root">
     <div class="App">
       <div class="wallet-info">
-        <p id="title">Taloc></p> 
+        <p id="title">Taloc</p> 
         <p>Account: Not Connected</p>
       </div>
       <div class="connect-wallet"><button>Connect Wallet</button></div>
